project-base/k8s/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: shopsys
spec:
  rules:
  - host: mc-code-dockerfile-circle.p4a.me
    http:
      paths:
      - path: /
        backend:
          serviceName: webserver
          servicePort: 8080
  - host: 2.mc-code-dockerfile-circle.p4a.me
    http:
      paths:
      - path: /
        backend:
          serviceName: webserver
          servicePort: 8080
